--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.0",
         "livewire/livewire": "^2.3",
+        "spatie/laravel-activitylog": "^3.17",
         "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
